# nitpick

./: .bumpversion.cfg  .codeclimate.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.toml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .tool-versions  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  ci-prepare-cmd.sh  local-nitpick.sh  mkdocs.yml  nitpick-style.toml  nitpick.toml  package.json  poetry.toml  pyproject.toml  python-no-poetry.toml  renovate.json  semantic-release.sh  setup.cfg  setup.py  tasks.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report---feature-request.md  bug-report.md  feature-request.md
.github/workflows/: python.yaml  python.yml  release-notes.yaml  release.yaml
.travis/: deploy.sh  fix-pre-commit.py  fix_pre_commit.py  script.sh
docs/: auto_detection.rst  autofix_docs.py  changelog.rst  cli.md  cli.rst  conf.py  config.rst  config_files.rst  configuration.md  configuration.rst  contents.rst  contributing.md  contributing.rst  defaults.rst  examples.rst  flake8_plugin.md  flake8_plugin.rst  generate_defaults.py  generate_rst.py  index.md  index.rst  installation_guide.rst  library.md  library.rst  main.py  nitpick_section.md  nitpick_section.rst  plugins.md  plugins.rst  quickstart.md  quickstart.rst  requirements.txt  setup_cfg.rst  styles.md  styles.rst  supported_files.rst  targets.rst  tool_nipick.rst  tool_nitpick_section.rst  troubleshooting.md  (+1 more)
docs/api/: cli.md  index.md  plugins.md
docs/ideas/: ini.toml  lab.py  semantic-release.toml  text-plugin.toml  text.toml  toml.toml
docs/source/: flake8_nitpick.files.rst  flake8_nitpick.rst  modules.rst  nitpick.app.rst  nitpick.blender.rst  nitpick.cli.rst  nitpick.compat.rst  nitpick.config.rst  nitpick.constants.rst  nitpick.core.rst  nitpick.documents.rst  nitpick.enums.rst  nitpick.exceptions.rst  nitpick.fields.rst  nitpick.files.base.rst  nitpick.files.json.rst  nitpick.files.pre_commit.rst  nitpick.files.pyproject_toml.rst  nitpick.files.rst  nitpick.files.setup_cfg.rst  nitpick.flake8.rst  nitpick.formats.rst  nitpick.generic.rst  nitpick.mixin.rst  nitpick.plugin.rst  nitpick.plugins.base.rst  nitpick.plugins.data.rst  nitpick.plugins.info.rst  nitpick.plugins.ini.rst  nitpick.plugins.json.rst  nitpick.plugins.pre_commit.rst  nitpick.plugins.pyproject_toml.rst  nitpick.plugins.rst  nitpick.plugins.setup_cfg.rst  nitpick.plugins.text.rst  nitpick.plugins.toml.rst  nitpick.plugins.yaml.rst  nitpick.project.rst  nitpick.resources.any.rst  nitpick.resources.javascript.rst  (+25 more)
docs/styles/: mypy.toml
docs/stylesheets/: extra.css
flake8_nitpick/: __init__.py  __version__.py  config.py  constants.py  generic.py  mixin.py  plugin.py  style.py  typedefs.py  types.py  utils.py
flake8_nitpick/files/: __init__.py  base.py  pre_commit.py  pyproject_toml.py  setup_cfg.py
mega-linter-plugin-nitpick/: nitpick.megalinter-descriptor.yml
nitpick/: __init__.py  __version__.py  config.py  constants.py  formats.py  generic.py  mixin.py  plugin.py  style.py  typedefs.py
nitpick/files/: __init__.py  base.py  json.py  pre_commit.py  pyproject_toml.py  setup_cfg.py
src/nitpick/: __init__.py  __main__.py  app.py  blender.py  cli.py  compat.py  config.py  constants.py  core.py  documents.py  enums.py  exceptions.py  fields.py  flake8.py  formats.py  generic.py  mixin.py  plugin.py  project.py  schemas.py  style.py  tomlkit_ext.py  typedefs.py  validators.py  violations.py
styles/: black.toml  commitizen.toml  editorconfig.toml  flake8.toml  ipython.toml  isort.toml  mypy.toml  package-json.toml  pre-commit.toml  pylint.toml  pytest.toml  python310.toml  python34-35-36-37.toml  python35-36-37-38.toml  python35-36-37.toml  python35.toml  python36-37.toml  python36.toml  python39.toml
styles/pre-commit/: bash.toml  commitlint.toml  general.toml  main.toml  python.toml
tests/: conftest.py  helpers.py  test_blender.py  test_builtin.py  test_cache.py  test_cli.py  test_config.py  test_generic.py  test_ini.py  test_json.py  test_meta.py  test_missing.py  test_nitpick.py  test_plugin.py  test_pre_commit.py  test_presets.py  test_project.py  test_pyproject_toml.py  test_resources.py  test_setup_cfg.py  test_style.py  test_text.py  test_toml.py  test_tomlkit_ext.py  test_violations.py  test_yaml.py  test_yaml_github_workflows.py  test_yaml_old_pre_commit.py  test_yaml_pre_commit.py
tests/data/: hello.py  pre-commit-config-with-old-repos-yaml-key.toml  sample-package-json-style.toml
tests/fixtures/: hello.py
tests/test_builtin/: real.toml  real.yaml
tests/test_ini/: 1-expected-editorconfig.ini  1-expected-pylintrc.ini  1-expected-setup.cfg  1-expected-tox.ini  2-actual-editorconfig.ini  2-expected-editorconfig.ini  2-style.toml  3-actual-setup.cfg  3-expected-setup.cfg
tests/test_json/: 1-expected-package.json  2-actual-package.json  2-expected-package.json  3-expected.json  3-style.toml  4-style.toml
tests/test_pre_commit/: 1-black.toml  1-isort.toml
tests/test_yaml/: 1-actual-pre-commit-config.yaml  1-desired.toml  1-expected-pre-commit-config.yaml  2-desired.toml  2-expected.yaml  actual.yaml  dict-falsy-values-actual.yaml  dict-falsy-values-desired.toml  dict-falsy-values-expected.yaml  dicts-hash-actual.yaml  dicts-hash-expected.yaml  existing-actual.yaml  existing-desired.toml  existing-expected.yaml  expected.yaml  hook-args-add.toml  hook-args-add.yaml  hook-args-change.toml  hook-args-change.yaml  hook-args.yaml  jmes-list-key-desired.toml  jmes-list-key-expected.yaml  list-by-hash-desired.toml  list-by-hash-expected.yaml  multiple-lists.yaml  new-desired.toml  new-expected.yaml  real.toml  real.yaml  style.toml  uk-empty-expected.yaml  uk-empty.toml  uk-override-expected.yaml  uk-override.toml
tests/test_yaml_github_workflows/: any-order.toml  any-order.yaml  dict-search-by-key-actual.yaml  dict-search-by-key-desired.yaml  recommended-versions.toml  release.toml  same-key-actual.yaml  (+13 more)
(+185 files in other folders)
